WIP search, does not work

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             android:name=".HomeScreenActivity"
             android:label="@string/title_activity_home_screen"
             android:theme="@style/AppTheme" />
-        <activity android:name=".search.SearchActivity"></activity>
+        <activity
+            android:name=".search.SearchActivity" />
     </application>
 
 </manifest>
