--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha1'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'com.google.firebase:firebase-firestore:17.0.4'
     implementation 'com.firebaseui:firebase-ui-firestore:4.0.0'
@@ -37,7 +38,9 @@ dependencies {
     implementation 'jp.wasabeef:picasso-transformations:2.2.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
-
+    implementation 'com.github.yalantis:ucrop:2.2.2-native'
+    implementation 'com.github.tajchert:nammu:1.2.0'
+    implementation 'com.github.jkwiecien:EasyImage:2.1.0'
     // lombok
     //compileOnly "org.projectlombok:lombok:1.18.2"
     //annotationProcessor "org.projectlombok:lombok:1.18.2"
@@ -46,10 +49,12 @@ dependencies {
     implementation 'com.jakewharton:butterknife:9.0.0-SNAPSHOT'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-SNAPSHOT'
 
+    implementation 'net.danlew:android.joda:2.9.9.4'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
-    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:design:28.0.0-beta01'
 }
 
 apply plugin: 'com.google.gms.google-services'
