some small fixes, release alpha 2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ch.beerpro.search.SearchActivity" />
         </activity>
-        <activity android:name=".rating.RatingActivity">
+        <activity android:name=".rating.RatingActivity"  android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".single.SingleBeerActivity" />
