--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "ch.beerpro"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 8
-        versionName "Alpha 8"
+        versionCode 9
+        versionName "Alpha 9"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
     }
@@ -42,7 +42,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-rc01'
     implementation 'androidx.recyclerview:recyclerview:1.0.0-rc01'
     implementation 'com.github.yalantis:ucrop:2.2.2-native'
     implementation 'com.github.tajchert:nammu:1.2.0'
