--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyASmm3To2wkzaK6ZswBwpHxPTwE-eVAnaQ" />
         <activity
             android:name=".presentation.splash.SplashScreenActivity"
             android:theme="@style/LoginScreenTheme">
